crates/rye/tests/ui/compile-fail/wrong-section.stderr
error: expected `,`
 --> $DIR/wrong-section.rs:5:13
  |
5 |     section!(cx);
  |             ^^^^

error: expected `,`
  --> $DIR/wrong-section.rs:10:13
   |
10 |     section!(cx);
   |             ^^^^

error: expected `,`
  --> $DIR/wrong-section.rs:11:13
   |
11 |     section!(cx);
   |             ^^^^

error: expected `,`
  --> $DIR/wrong-section.rs:17:17
   |
17 |         section!(cx);
   |                 ^^^^
